--- a/back-end/student-management-system/src/main/resources/application.properties
+++ b/back-end/student-management-system/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.batch.job.enabled=false
+#spring.batch.job.enabled=false
+
+#spring.batch.job.enabled=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/student-management-system
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.database=postgresql
+spring.jpa.database-platform:org.hibernate.dialect.PostgreSQLDialect
