--- a/back-end/student-management-system/src/main/resources/application.properties
+++ b/back-end/student-management-system/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.format-sql=true
 spring.jpa.database=postgresql
 spring.jpa.database-platform:org.hibernate.dialect.PostgreSQLDialect
+
+
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=ADMIN
